--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nepal General Knowledge Quiz</title>
+    <title>General Knowledge Quiz</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Nepal General Knowledge Quiz</h1>
+    <h1> General Knowledge Quiz</h1>
     <div id="quiz-container">
         <div id="quiz"></div>
         <button id="submit-btn">Submit Answers</button>
